ui-ux: Fix the 'blog' masonry grid spacing

--- a/css/app.sass
+++ b/css/app.sass
@@ -344,10 +344,10 @@ header
 		
 	.masonry
 		column-count: 1
-		column-gap: 1em
+		column-gap: 0
 
 		article
-			margin: 0 0 1em
+			margin: 0 0 30px
 			-webkit-column-break-inside: avoid
 			page-break-inside: avoid
 			break-inside: avoid
